--- a/Admin/Home-admin.html
+++ b/Admin/Home-admin.html
@@ -8,16 +8,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="home-admin.css">
 </head>
 
 <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-          <a class="navbar-brand" href="#" style="margin-left: 50px;"><h2>ADMIN</h2></a>
-          
-      </nav>
-    </header>
+        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #090803;">
+            <a class="navbar-brand" href="#" style="margin-left:50px;">ADMIN</a>
+        </nav>
 
+    </header>
+    <div class="Contianer-2">
+        <section class="section">
+            <div class="alert">
+                    ลำดับการจองคิว
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+                <div class="alert-2" role="alert">
+                    คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
+                </div>
+            </div>
+        </section>
+        <aside class="aside">
+            <div class="box1">
+                คำนวณสถิติ
+            </div><br><br>
+            <div class="box1">
+                Feedback
+            </div>
+        </aside>
+    </div>
 </body>
 
 </html>
