--- a/Admin/startic.html
+++ b/Admin/startic.html
@@ -2,21 +2,103 @@
 <html lang="en">
 
 <head>
-    <title>Home</title>
+    <title>static</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="startic-one.css">
 </head>
 
 <body>
     <header>
-      <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
-          <a class="navbar-brand" href="#" style="margin-left: 50px;"><h2>ADMIN</h2></a>
-          
-      </nav>
+        <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #090803;">
+            <a class="navbar-brand" href="#" style="margin-left:50px;">ADMIN</a>
+        </nav>
     </header>
+
+    <div class="Contianer">
+
+        <section class="section">
+            <div class="card">
+                <form>
+                    <div class="from-input">
+                        <label for="" class="form-label">วัน/วันที่/เดือน/ปี</label>
+                        <input type="email" class="form-control" name="" id="" aria-describedby="วัน/วันที่/เดือน"
+                            placeholder="" size="">
+                        <small id="emailHelpId" class="form-text text-muted"></small><br>
+
+                        <label for="" class="form-label">จำนวนคน</label>
+                        <input type="email" class="form-control" name="" id="" aria-describedby="จำนวนคน" placeholder=""
+                            size="">
+                        <small id="emailHelpId" class="form-text text-muted"></small><br>
+
+                        <label for="" class="form-label">ราคาต่อคน</label>
+                        <input type="email" class="form-control" name="" id="" aria-describedby="ราคาต่อคน"
+                            placeholder="" size="">
+                        <small id="emailHelpId" class="form-text text-muted"></small><br>
+
+                    </div><br>
+                    <center>
+                        <div class="button">
+                            <button type="button" name="" id="" class="btn btn-primary">Submit</button>
+                        </div>
+                    </center>
+                </form>
+            </div>
+        </section>
+
+        <aside class="aside">
+            <table class="table" style="background-color: aqua; ">
+                ตารางข้อมูลการพยากรย์
+                <tr>
+
+                    <th>วัน/เวลา</th>
+                    <th>จำนวนคน</th>
+                    <th>ราคาต่อคน</th>
+                    <th>ยอดรวม</th>
+
+                </tr>
+                <tr>
+                    <td>จันทร์/12/03/66 </td>
+                    <td> 69 </td>
+                    <td>159 </td>
+                    <td>10971</td>
+                </tr>
+                <tr>
+                    <td>อังคาร/13/03/66 </td>
+                    <td> 69 </td>
+                    <td>159 </td>
+                    <td>10971</td>
+                </tr>
+                <tr>
+                    <td>พุธ/14/03/66 </td>
+                    <td> 69 </td>
+                    <td>159 </td>
+                    <td>10971</td>
+                </tr>
+                <tr>
+                    <td>พฤหัส/15/03/66 </td>
+                    <td> 69 </td>
+                    <td>159 </td>
+                    <td>10971</td>
+                </tr>
+                <tr>
+                    <td>ศุกร์/1ุ6/03/66 </td>
+                    <td> 69 </td>
+                    <td>159 </td>
+                    <td>10971</td>
+                </tr>
+            </table>
+            <center>
+                <div class="box-1">
+                    <button type="button" name="" id="" class="btn btn-primary">พยากรย์ยอดขาย</button><br><br>
+                    <button type="button" name="" id="" class="btn btn-primary">สถิติลูกค้า</button>
+                </div>
+            </center>
+        </aside>
+    </div>
 
 </body>
 
