--- a/Admin/Static/graph-1.html
+++ b/Admin/Static/graph-1.html
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="#" style="margin-left:50px;">ADMIN</a>
     </nav>
     <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #b8a130;">
-        <a class="navbar-brand" href="#" style="margin-left:50px; ">พยากรย์ยอดขาย</a>
+        <a class="navbar-brand" href="#" style="margin-left:50px; ">พยากรณ์ยอดขาย</a>
 
     </nav>
   </header>
@@ -64,7 +64,7 @@
         </div>
     </section>
     <aside class="aside">
-        กราฟเเสดงการพยากรย์
+        กราฟเเสดงการพยากรณ์
 
     </aside>
 
