--- a/Admin/Static/startic.html
+++ b/Admin/Static/startic.html
@@ -93,7 +93,7 @@
             </table>
             <center>
                 <div class="box-1">
-                    <button type="button" name="" id="" class="btn btn-primary">พยากรย์ยอดขาย</button><br><br>
+                    <button type="button" name="" id="" class="btn btn-primary">พยากรณ์ยอดขาย</button><br><br>
                     <button type="button" name="" id="" class="btn btn-primary">สถิติลูกค้า</button>
                 </div>
             </center>
