--- a/Actor/1.firstpage/firstpage.html
+++ b/Actor/1.firstpage/firstpage.html
@@ -14,6 +14,14 @@
 </head>
 
 <body>
+   <header >
+    <div class="botton">
+        <button type="button" name="" id="" class="btn btn-primary">Login</button>
+        <button type="button" name="" id="" class="btn btn-primary">สมัครสมาชิก</button>
+        <button type="button" name="" id="" class="btn btn-primary">Comment</button>
+
+    </div>
+   </header>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-12">
