--- a/Admin/Static/startic.html
+++ b/Admin/Static/startic.html
@@ -21,32 +21,12 @@
     <div class="Contianer">
 
         <section class="section">
-            <div class="card">
-                <form>
-                    <div class="from-input">
-                        <label for="" class="form-label">วัน/วันที่/เดือน/ปี</label>
-                        <input type="email" class="form-control" name="" id="" aria-describedby="วัน/วันที่/เดือน"
-                            placeholder="" size="">
-                        <small id="emailHelpId" class="form-text text-muted"></small><br>
 
-                        <label for="" class="form-label">จำนวนคน</label>
-                        <input type="email" class="form-control" name="" id="" aria-describedby="จำนวนคน" placeholder=""
-                            size="">
-                        <small id="emailHelpId" class="form-text text-muted"></small><br>
-
-                        <label for="" class="form-label">ราคาต่อคน</label>
-                        <input type="email" class="form-control" name="" id="" aria-describedby="ราคาต่อคน"
-                            placeholder="" size="">
-                        <small id="emailHelpId" class="form-text text-muted"></small><br>
-
-                    </div><br>
-                    <center>
-                        <div class="button">
-                            <button type="button" name="" id="" class="btn btn-primary">Submit</button>
-                        </div>
-                    </center>
-                </form>
+            <div>
+                เลือกวัน/เวลา
+                <input type="date">
             </div>
+
         </section>
 
         <aside class="aside">
@@ -55,42 +35,60 @@
                 <tr>
 
                     <th>วัน/เวลา</th>
+                    <th>โปรโมชั่น</th>
                     <th>จำนวนคน</th>
-                    <th>ราคาต่อคน</th>
-                    <th>ยอดรวม</th>
+                    <th>ยอดรวมโปรโมชั่น</th>
+
 
                 </tr>
                 <tr>
                     <td>จันทร์/12/03/66 </td>
-                    <td> 69 </td>
-                    <td>159 </td>
-                    <td>10971</td>
+                    <td> A </td>
+                    <td>20 </td>
+                    <td>6000</td>
+                </tr>
+                <tr>
+                    <td>จันทร์/12/03/66 </td>
+                    <td> B </td>
+                    <td>30 </td>
+                    <td>7000</td>
+                </tr>
+                <tr>
+                    <td>จันทร์/12/03/66 </td>
+                    <td> C </td>
+                    <td>15 </td>
+                    <td>3000</td>
+                </tr>
+                <tr>
+                    <td>ยอดรวมทั้งหมด</td>
+                    <td> 16000 </td>
+
                 </tr>
                 <tr>
                     <td>อังคาร/13/03/66 </td>
-                    <td> 69 </td>
-                    <td>159 </td>
-                    <td>10971</td>
+                    <td> A </td>
+                    <td>20 </td>
+                    <td>6000</td>
                 </tr>
                 <tr>
-                    <td>พุธ/14/03/66 </td>
-                    <td> 69 </td>
-                    <td>159 </td>
-                    <td>10971</td>
+                    <td>อังคาร/13/03/66 </td>
+                    <td> B </td>
+                    <td>30 </td>
+                    <td>7000</td>
                 </tr>
                 <tr>
-                    <td>พฤหัส/15/03/66 </td>
-                    <td> 69 </td>
-                    <td>159 </td>
-                    <td>10971</td>
+                    <td>อังคาร/13/03/66 </td>
+                    <td> C </td>
+                    <td>15 </td>
+                    <td>3000</td>
                 </tr>
                 <tr>
-                    <td>ศุกร์/1ุ6/03/66 </td>
-                    <td> 69 </td>
-                    <td>159 </td>
-                    <td>10971</td>
+                    <td>ยอดรวมทั้งหมด</td>
+                    <td> 16000 </td>
+
                 </tr>
-            </table>
+
+            </table><br>
             <center>
                 <div class="box-1">
                     <button type="button" name="" id="" class="btn btn-primary">พยากรณ์ยอดขาย</button><br><br>
