--- a/Admin/Static/startic.html
+++ b/Admin/Static/startic.html
@@ -31,7 +31,7 @@
 
         <aside class="aside">
             <table class="table" style="background-color: aqua; ">
-                ตารางข้อมูลการพยากรย์
+                ตารางคำนวณยอดขาย
                 <tr>
 
                     <th>วัน/เวลา</th>
@@ -64,33 +64,12 @@
                     <td> 16000 </td>
 
                 </tr>
-                <tr>
-                    <td>อังคาร/13/03/66 </td>
-                    <td> A </td>
-                    <td>20 </td>
-                    <td>6000</td>
-                </tr>
-                <tr>
-                    <td>อังคาร/13/03/66 </td>
-                    <td> B </td>
-                    <td>30 </td>
-                    <td>7000</td>
-                </tr>
-                <tr>
-                    <td>อังคาร/13/03/66 </td>
-                    <td> C </td>
-                    <td>15 </td>
-                    <td>3000</td>
-                </tr>
-                <tr>
-                    <td>ยอดรวมทั้งหมด</td>
-                    <td> 16000 </td>
-
-                </tr>
+                
 
             </table><br>
             <center>
                 <div class="box-1">
+                    
                     <button type="button" name="" id="" class="btn btn-primary">พยากรณ์ยอดขาย</button><br><br>
                     <button type="button" name="" id="" class="btn btn-primary">สถิติลูกค้า</button>
                 </div>
