--- a/Admin/Static/graph-1.html
+++ b/Admin/Static/graph-1.html
@@ -27,37 +27,24 @@
  <div class="Contianer">
     <section class="section">
     
-        <div class="card">
-            <div class="mb-3">
-              <label for="" class="form-label"></label>
-              <input type="file" class="form-control" name="" id="" placeholder="" aria-describedby="fileHelpId">
-              <div id="fileHelpId" class="form-text">Help text</div>
-            </div>
+        
             <form>
                 <div class="from-input">
+                    <div>
+                        ย้อนหลังขั้นต่ำ 3 เดือน
+                    </div><br>
                     <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="">
-                      <label class="form-check-label" for="">
-                        1 เดือน
-                      </label>
-                    </div>
-                    <div class="form-check">
-                      <input class="form-check-input" type="checkbox" value="" id="" checked>
-                      <label class="form-check-label" for="">
-                        4 เดือน
-                      </label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" value="" id="" checked>
-                        <label class="form-check-label" for="">
-                          ปี
-                        </label>
-                      </div>
+
+                    <input type="number" style="width: 100px ;">
+                      เดือน
 
                 </div><br>
+                <div>
+
+                </div>
                 <center>
                     <div class="button">
-                        <button type="button" name="" id="" class="btn btn-primary">Submit</button>
+                        <button type="button" name="" id="" class="btn btn-primary">พยากรณ์</button>
                     </div>
                 </center>
             </form>
