--- a/Actor/1.firstpage/firstpage.html
+++ b/Actor/1.firstpage/firstpage.html
@@ -16,7 +16,7 @@
 <body>
    <header >
     <div class="botton">
-        <button type="button" name="" id="" class="btn btn-primary">Login</button>
+        <button type="button" name="" id="" class="btn btn-primary">ลงชื่อเข้าใช้</button>
         <button type="button" name="" id="" class="btn btn-primary">สมัครสมาชิก</button>
         <button type="button" name="" id="" class="btn btn-primary">Comment</button>
 
