--- a/Admin/HomeAdmin/Home-admin.html
+++ b/Admin/HomeAdmin/Home-admin.html
@@ -21,7 +21,7 @@
     <div class="Contianer-2">
         <section class="section">
             <div class="alert">
-                    ลำดับการจองคิว
+                ลำดับการจองคิว
                 <div class="alert-2" role="alert">
                     คิวที่ 1 โต๊ะ c จำนวน 3 คน โปรโมชั่น...
                 </div>
@@ -57,14 +57,39 @@
                 </div>
             </div>
         </section>
-        <aside class="aside">
+        <div class="aside">
+            <div class="box_tic">
+                <div class="content_tic">
+                    <div class="orderwait">
+                        <h3>จำนวนที่จองเข้ามา</h3>
+                        <h3>10</h3>
+                    </div>
+                    <div class="orderempty">
+                        <h3>จำนวนที่เหลือ</h3>
+                        <h3>10</h3>
+                    </div>
+
+                </div>
+                <div class="footer_tic">
+                    <div class="bt-l">
+                        <button id="button_d">เพิ่ม</button>
+                    </div>
+                    <div class="bt-R">
+                        <button id="button_d">ลด</button>
+                    </div>
+                </div>
+                <p><button id="button_suc">ตกลง</button></p>
+            </div>
+            <div class="box1">
+                เเก้ไขข้อมูล
+            </div>
             <div class="box1">
                 คำนวณสถิติ
-            </div><br><br>
+            </div>
             <div class="box1">
                 Feedback
             </div>
-        </aside>
+        </div>
     </div>
 </body>
 
