--- a/Actor/1.firstpage/firstpage.html
+++ b/Actor/1.firstpage/firstpage.html
@@ -19,6 +19,8 @@
         <button type="button" name="" id="" class="btn btn-primary">ลงชื่อเข้าใช้</button>
         <button type="button" name="" id="" class="btn btn-primary">สมัครสมาชิก</button>
         <button type="button" name="" id="" class="btn btn-primary">Comment</button>
+        <button type="button" name="" id="" class="btn btn-primary">ยกเลิกการจอง</button>
+
 
     </div>
    </header>
