--- a/Actor/6.ticket/ticket.html
+++ b/Actor/6.ticket/ticket.html
@@ -30,6 +30,9 @@
           <p class="text-center"><h1>C1</h1></p>
           <p class="text-center"><h5>ราคาที่ต้องจ่าย 747 บาท</h5></p>
       </div>
+      <div style="margin-left:590px">
+        <button>ยกเลิกการจอง</button>
+      </div>
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
