--- a/Admin/HomeAdmin/Home-admin.html
+++ b/Admin/HomeAdmin/Home-admin.html
@@ -80,13 +80,13 @@
                 </div>
                 <p><button id="button_suc">ตกลง</button></p>
             </div>
-            <div class="box1">
+            <div class="box1" href=" select1.html ">
                 เเก้ไขข้อมูล
             </div>
-            <div class="box1">
+            <div class="box1" href="graph-2.html" >
                 คำนวณสถิติ
             </div>
-            <div class="box1">
+            <div class="box1" href=" feedback.html">
                 Feedback
             </div>
         </div>
