--- a/Admin/Static/graph-2.html
+++ b/Admin/Static/graph-2.html
@@ -57,7 +57,7 @@
                 
                 <center>
                     <div class="button">
-                        <button type="button" name="" id="" class="btn btn-primary">ดูสถิติ</button>
+                        <button type="button" name="" id="" class="btn btn-primary" href=" startic.html">ดูสถิติ</button>
                     </div>
                 </center>
             </form>
