--- a/Actor/1.firstpage/firstpage.html
+++ b/Actor/1.firstpage/firstpage.html
@@ -16,10 +16,10 @@
 <body>
    <header >
     <div class="botton">
-        <button type="button" name="" id="" class="btn btn-primary">ลงชื่อเข้าใช้</button>
-        <button type="button" name="" id="" class="btn btn-primary">สมัครสมาชิก</button>
-        <button type="button" name="" id="" class="btn btn-primary">Comment</button>
-        <button type="button" name="" id="" class="btn btn-primary">ยกเลิกการจอง</button>
+        <button type="button" name="" id="" class="btn btn-primary" href="login.html">ลงชื่อเข้าใช้</button>
+        <button type="button" name="" id="" class="btn btn-primary" href="register.html">สมัครสมาชิก</button>
+        <button type="button" name="" id="" class="btn btn-primary" href="/">Comment</button>
+        <button type="button" name="" id="" class="btn btn-primary" href="cancelOder.html">ยกเลิกการจอง</button>
 
 
     </div>
@@ -63,7 +63,7 @@
                             <p class="card-text" >
                                 <h1 id="detail" style="text-align: center;">5</h1>
     
-                            <p><button>กดจองที่นี้</button></p>
+                            <p><button href="">กดจองที่นี้</button></p>
                     </div>
                 </div>
             </div>
