--- a/Actor/1.firstpage/firstpage.html
+++ b/Actor/1.firstpage/firstpage.html
@@ -16,10 +16,11 @@
 <body>
    <header >
     <div class="botton">
-        <button type="button" name="" id="" class="btn btn-primary" href="login.html">ลงชื่อเข้าใช้</button>
-        <button type="button" name="" id="" class="btn btn-primary" href="register.html">สมัครสมาชิก</button>
-        <button type="button" name="" id="" class="btn btn-primary" href="/">Comment</button>
-        <button type="button" name="" id="" class="btn btn-primary" href="cancelOder.html">ยกเลิกการจอง</button>
+        <a name="" id="" class="btn btn-primary" href="D:\work\code_vs\css&html\projeck ip\Actor\2.login\login.html" role="button">ลงชื่อเข้าใช้</a>
+        <a name="" id="" class="btn btn-primary" href="D:\work\code_vs\css&html\projeck ip\Actor\3.register\register.html" role="button">สมัครสมาชิก</a>
+        <a name="" id="" class="btn btn-primary" href="D:\work\code_vs\css&html\projeck ip\Actor\2.login\login.html" role="button">Comment</a>
+        <a name="" id="" class="btn btn-primary" href="D:\work\code_vs\css&html\projeck ip\Actor\8.cancelOrder\cancelOrder.html" role="button">ยกเลิกการจอง</a>
+        
 
 
     </div>
