--- a/Admin/HomeAdmin/Home-admin.html
+++ b/Admin/HomeAdmin/Home-admin.html
@@ -80,15 +80,14 @@
                 </div>
                 <p><button id="button_suc">ตกลง</button></p>
             </div>
-            <div class="box1" href=" select1.html ">
-                เเก้ไขข้อมูล
+            <div class="box1" >
+                <a href=" D:\work\code_vs\css&html\projeck ip\Admin\select\select1.html ">เเก้ไขข้อมูล</a>
             </div>
-            <div class="box1" href="graph-2.html" >
-                คำนวณสถิติ
+            <div class="box1"  >
+                <a href="D:\work\code_vs\css&html\projeck ip\Admin\Static\startic.html">คำนวณสถิติ</a>
             </div>
-            <div class="box1" href=" feedback.html">
-                Feedback
-            </div>
+            <div class="box1" >
+                <a href=" D:\work\code_vs\css&html\projeck ip\Admin\feedback\feedback.html">Feedback</a>
         </div>
     </div>
 </body>
