--- a/Admin/Static/startic.html
+++ b/Admin/Static/startic.html
@@ -69,9 +69,8 @@
             </table><br>
             <center>
                 <div class="box-1">
+                    <a name="" id="" class="btn btn-primary" href="D:\work\code_vs\css&html\projeck ip\Admin\Static\graph-2.html" role="button">สถิติลูกค้า</a>
                     
-                    
-                    <button type="button" name="" id="" class="btn btn-primary">สถิติลูกค้า</button>
                 </div>
             </center>
         </aside>
