--- a/Admin/Static/startic.html
+++ b/Admin/Static/startic.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-
-{{> basehead customTitle='history price | ' }}
-
-    <link rel="stylesheet" href="/Admincss/startic-one.css">
-
+<head>
+    <title>static</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="startic-one.css">
+</head>
 
 <body>
     <header>
