--- a/Actor/4.from/infotic.html
+++ b/Actor/4.from/infotic.html
@@ -1,10 +1,16 @@
 <!doctype html>
 <html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{{> basehead customTitle='from | ' csss = 'Actorcss/infotic.css'}}
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
- <link rel="stylesheet"  href="/Actorcss/infotic.css"> 
-
+    <title>Ticket info</title>
+    <link href="infotic.css" rel="stylesheet"
+  </head>
 
   <body class="text-center">
     <h1>ข้อมูลการจอง</h1>
