--- a/Actor/5.selectorder/selectorder.html
+++ b/Actor/5.selectorder/selectorder.html
@@ -1,14 +1,19 @@
 <!doctype html>
 <html lang="en">
+  <head>
+  	<title>เลือกโปรโมชั่น</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{{> basehead customTitle='select order | ' }}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
-	<link rel="stylesheet" href="/Actorcss/selectstyle.css">
+	<link rel="stylesheet" href="style.css">
 
-
+	</head>
 	<body>
 
-		
+		<!-- ------------------------------------------------------------------------------------------------------------------------- -->
 		<div class="header">
 			<h1>โปรโมชั่น</h1>
 			<p>โปรโมชั่น พิเศษ</p>
