--- a/Actor/8.cancelOrder/cancelOrder.html
+++ b/Actor/8.cancelOrder/cancelOrder.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
 
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-{{> basehead customTitle='cancelorder | ' }}
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link href="/Actorcss/cancelorder.css" rel="stylesheet"> 
+  <title>Ticket info</title>
+  <link href="cancelorder.css" rel="stylesheet">  </head>
 
 <body>
   <div class="main">
