--- a/Actor/comment/comment.html
+++ b/Actor/comment/comment.html
@@ -1,12 +1,18 @@
 <!doctype html>
 <html lang="en">
 
+<head>
+  <title>Title</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{{> basehead customTitle='comment | ' }}
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="comment.css">
 
-  <link rel="/Actorcss/stylesheet" href="comment.css">
-
-
+</head>
 
 <body>
   <header>
