--- a/Admin/LoginAdmin/Login-pang.html
+++ b/Admin/LoginAdmin/Login-pang.html
@@ -1,10 +1,15 @@
 <!doctype html>
 <html lang="en">
 
-
-{{> basehead customTitle='Admin login | ' }}
-
-    <link rel="stylesheet" href="/Admincss/Login-pang-one.css">    
+<head>
+    <title>LOGIN</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="Login-pang-one.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+</head>
 
 <body>
 
