--- a/Admin/Static/graph-2.html
+++ b/Admin/Static/graph-2.html
@@ -1,10 +1,17 @@
 <!doctype html>
 <html lang="en">
 
+<head>
+  <title>static</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-{{> basehead  customTitle='กราฟ | ' }}
-
-    <link rel="stylesheet" href="/Admincss/graph-1-one.css">
+  <!-- Bootstrap CSS v5.2.1 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="graph-1-one.css">
+</head>
 
 <body>
   <header>
@@ -52,7 +59,7 @@
                     <div class="button">
                         <button type="button" name="" id="" class="btn btn-primary" href=" startic.html">ดูสถิติ</button>
                     </div>
-                </center>B
+                </center>
             </form>
         </div>
         
