--- a/Admin/select/select1.html
+++ b/Admin/select/select1.html
@@ -1,12 +1,19 @@
 <!doctype html>
 <html lang="en">
- 
-{{> basehead customTitle='เลือกโปรโมชั่น | ' }}
+  <head>
+  	<title>เลือกโปรโมชั่น</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	
-	<link rel="stylesheet" href="/Admincss/select1-1.css">
+	<link rel="stylesheet" href="select1-1.css">
+
+	</head>
 	<body>
 
-	
+		<!-- ------------------------------------------------------------------------------------------------------------------------- -->
 		<div class="header">
 			<h1>เเก้ไขข้อมูลโปรโมชั่น</h1>
 			
