--- a/Actor/tableseats/tableseats.html
+++ b/Actor/tableseats/tableseats.html
@@ -3,12 +3,14 @@
 <head>
   <title>CSS seat booking</title>
   <link rel="stylesheet" type="text/css" href="tableseats.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
 </head>
 
 <body>
   <div class="plane">
     <div class="select">
-      <h1>Please select a seat</h1>
+      <h1>Please select a table</h1>
     </div>
   <ol>
     <li>
@@ -223,6 +225,54 @@
     </li>
   </ol>
   <div class="exit"></div>
+  
+  <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      select table
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+      <a class="dropdown-item" href="#">1A</a>
+      <a class="dropdown-item" href="#">1B</a>
+      <a class="dropdown-item" href="#">1C</a>
+      <a class="dropdown-item" href="#">1D</a>
+      <a class="dropdown-item" href="#">2A</a>
+      <a class="dropdown-item" href="#">2B</a>
+      <a class="dropdown-item" href="#">2C</a>
+      <a class="dropdown-item" href="#">2D</a>
+      <a class="dropdown-item" href="#">3A</a>
+      <a class="dropdown-item" href="#">3B</a>
+      <a class="dropdown-item" href="#">3C</a>
+      <a class="dropdown-item" href="#">3D</a>
+      <a class="dropdown-item" href="#">4A</a>
+      <a class="dropdown-item" href="#">4B</a>
+      <a class="dropdown-item" href="#">4C</a>
+      <a class="dropdown-item" href="#">4D</a>
+      <a class="dropdown-item" href="#">5A</a>
+      <a class="dropdown-item" href="#">5B</a>
+      <a class="dropdown-item" href="#">5C</a>
+      <a class="dropdown-item" href="#">5D</a>
+      <a class="dropdown-item" href="#">6A</a>
+      <a class="dropdown-item" href="#">6B</a>
+      <a class="dropdown-item" href="#">6C</a>
+      <a class="dropdown-item" href="#">6D</a>
+      <a class="dropdown-item" href="#">7A</a>
+      <a class="dropdown-item" href="#">7B</a>
+      <a class="dropdown-item" href="#">7C</a>
+      <a class="dropdown-item" href="#">7D</a>
+      <a class="dropdown-item" href="#">8A</a>
+      <a class="dropdown-item" href="#">8B</a>
+      <a class="dropdown-item" href="#">8C</a>
+      <a class="dropdown-item" href="#">8D</a>
+      <a class="dropdown-item" href="#">9A</a>
+      <a class="dropdown-item" href="#">9B</a>
+      <a class="dropdown-item" href="#">9C</a>
+      <a class="dropdown-item" href="#">9D</a>
+      <a class="dropdown-item" href="#">10A</a>
+      <a class="dropdown-item" href="#">10B</a>
+      <a class="dropdown-item" href="#">10C</a>
+      <a class="dropdown-item" href="#">10D</a>
+    </div>
+  </div>
 </div>
 </body>
 </html>
